--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="outbox">
-    <div id="in1"><img src="bitswgl_logo.jpg" alt="" height="250px" width="340";></div>
+    <div id="in1"><img src="bbb1.jpg" alt="" height="200px" width="200px";></div>
     <div id="in2">
         <h1 id="clgname">balaji institute of technology and science</h1>
         <h3 id="name1">affiliated to JNTUH,hyderabad and approved by AICTE new delhi</h3>
@@ -47,10 +47,11 @@
 <br>
 <div class="outerbox">
     <div id="inbox1"></div>
-    <div id="inbox2"> <img src="chairman - Copy.png" alt="" width="250px" height="270px">
+    <div id="inbox2"> <img src="chairman - Copy.png" alt="" width="300px" height="270px">
     <h2>chairman</h2>
-</div>
-    <div id="inbox3"> <img src="pman - Copy.jpg" alt="" width="250px" height="270px">
+    <h2>Rajendra prasad</h2>
+     </div>
+    <div id="inbox3"> <img src="pman - Copy.jpg" alt="" width="300px" height="270px">
     <h2>principal</h2>
     <h2>hari haran</h2>
     </div>
